# mock-api-server

./: TEAM_TASK.md  compose.yaml  debian_packages.txt  pyproject.toml  readme.md  tests.Dockerfile
app/: mock.py
app/responses/: guid_add.json
app/routes/: inventory_devices.py
config/: web_ui_config.yaml
rsa-cert-generation/: create_certs.sh  intermediate-openssl.conf
tests/: test_to_remove.py
tests_lib/: __init__.py
tests_lib/common/: __init__.py  logger.py  yaml_loaders.py
tests_lib/remove_it/: common.py
